{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "b2a872eb-f3cb-4afb-8dd7-3298bdd99fd5",
            "actions": [
                {
                    "name": "RightClick",
                    "type": "Button",
                    "id": "df165c55-9dd8-4c02-8926-d7fcfe4c63e3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "939c6f10-94ee-45e2-b5f8-1dcf34ad00ac",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Multi",
                    "type": "Button",
                    "id": "cb62f35a-097d-452c-9b2a-629dcfc76ba4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "816f3f0b-f04e-4f54-8d77-80521759710a",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1689cdc1-6ecf-44ff-81d4-7004c7edf886",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2917000f-79c0-47ed-a6f0-62b47fab6a72",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Multi",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7bb853fc-90d0-45a8-be19-bde02567d9c8",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Multi",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}